--- a/apps/linkding/docker-compose.yml.template
+++ b/apps/linkding/docker-compose.yml.template
@@ -12,9 +12,9 @@ services:
         volumes:
         - "{{ fs.app_data }}/etc/linkding/data:/etc/linkding/data"
         environment:
-        - LD_ENABLE_AUTH_PROXY: "True",
-        - LD_SUPERUSER_NAME: "admin",
-        - LD_AUTH_PROXY_USERNAME_HEADER: "HTTP_X_PTL_USER",
+        - LD_ENABLE_AUTH_PROXY: "True"
+        - LD_SUPERUSER_NAME: "admin"
+        - LD_AUTH_PROXY_USERNAME_HEADER: "HTTP_X_PTL_USER"
         - DEBUG: "true"
         networks:
         - portal
