--- a/apps/freshrss/docker-compose.yml.template
+++ b/apps/freshrss/docker-compose.yml.template
@@ -13,7 +13,7 @@ services:
         - "{{ fs.app_data }}/var/www/FreshRSS/data:/var/www/FreshRSS/data"
         - "{{ fs.app_data }}/var/www/FreshRSS/extensions:/var/www/FreshRSS/extensions"
         environment:
-        - FRESHRSS_INSTALL: "--base_url https://freshrss.{{ portal.domain }}/ --default_user portal --auth_type none"
-        - FRESHRSS_USER: "--user portal"
+        - FRESHRSS_INSTALL=--base_url https://freshrss.{{ portal.domain }}/ --default_user portal --auth_type none
+        - FRESHRSS_USER=--user portal
         networks:
         - portal
