--- a/apps/glances/docker-compose.yml.template
+++ b/apps/glances/docker-compose.yml.template
@@ -13,6 +13,6 @@ services:
         - "{{ fs.app_data }}/data:/data"
         - /var/run/docker.sock:/var/run/docker.sock:ro
         environment:
-        - GLANCES_OPT:"-w --disable-plugin network,connections,processlist,diskio"
+        - GLANCES_OPT=-w --disable-plugin network,connections,processlist,diskio
         networks:
         - portal
