--- a/apps/overleaf/docker-compose.yml.template
+++ b/apps/overleaf/docker-compose.yml.template
@@ -20,37 +20,19 @@ services:
         - portal
         - overleaf
         environment:
-
-            SHARELATEX_MONGO_URL: mongodb://overleaf-mongo/sharelatex
-            SHARELATEX_REDIS_HOST: overleaf-redis
-            REDIS_HOST: overleaf-redis
-
-            ENABLED_LINKED_FILE_TYPES: 'project_file,project_output_file'
-
-            # Enables Thumbnail generation using ImageMagick
-            ENABLE_CONVERSIONS: 'true'
-
-            # Disables email confirmation requirement
-            EMAIL_CONFIRMATION_DISABLED: 'true'
-
-            # temporary fix for LuaLaTex compiles
-            # see https://github.com/overleaf/overleaf/issues/695
-            TEXMFVAR: /var/lib/sharelatex/tmp/texmf-var
-
-            SHARELATEX_SITE_URL: "https://overleaf.{{ portal.domain }}/"
-            SHARELATEX_NAV_TITLE: "Overleaf on {{ portal.short_id }}"
-            SHARELATEX_APP_NAME: "Overleaf on {{ portal.short_id }}"
-            SHARELATEX_BEHIND_PROXY: "true"
-            SHARELATEX_ALLOW_PUBLIC_ACCESS: "true"
-            SHARELATEX_ALLOW_ANONYMOUS_READ_AND_WRITE_SHARING: "true"
-            # SHARELATEX_HEADER_IMAGE_URL: http://somewhere.com/mylogo.png
-            # SHARELATEX_ADMIN_EMAIL: support@it.com
-
-            # SHARELATEX_LEFT_FOOTER: '[{"text": "Powered by <a href=\"https://www.sharelatex.com\">ShareLaTeX</a> 2016"},{"text": "Another page I want to link to can be found <a href=\"here\">here</a>"} ]'
-            # SHARELATEX_RIGHT_FOOTER: '[{"text": "Hello I am on the Right"} ]'
-
-            # SHARELATEX_EMAIL_FROM_ADDRESS: "team@sharelatex.com"
-
+        - SHARELATEX_MONGO_URL=mongodb://overleaf-mongo/sharelatex
+        - SHARELATEX_REDIS_HOST=overleaf-redis
+        - REDIS_HOST=overleaf-redis
+        - ENABLED_LINKED_FILE_TYPES='project_file,project_output_file'
+        - ENABLE_CONVERSIONS='true'
+        - EMAIL_CONFIRMATION_DISABLED='true'
+        - TEXMFVAR=/var/lib/sharelatex/tmp/texmf-var
+        - SHARELATEX_SITE_URL=https://overleaf.{{ portal.domain }}/
+        - SHARELATEX_NAV_TITLE=Overleaf on {{ portal.short_id }}
+        - SHARELATEX_APP_NAME=Overleaf on {{ portal.short_id }}
+        - SHARELATEX_BEHIND_PROXY=true
+        - SHARELATEX_ALLOW_PUBLIC_ACCESS=true
+        - SHARELATEX_ALLOW_ANONYMOUS_READ_AND_WRITE_SHARING=true
     overleaf-mongo:
         restart: always
         image: mongo:4.4
