--- a/apps/wallabag/app.json
+++ b/apps/wallabag/app.json
@@ -1,7 +1,7 @@
 {
   "v": "2.0",
   "name": "wallabag",
-  "image": "wallabag/wallabag",
+  "image": "wallabag/wallabag:2.5.2",
   "port": 80,
   "data_dirs": [
     "/var/www/wallabag/data",
