fix versions for all apps

--- a/apps/node-red/docker-compose.yml.template
+++ b/apps/node-red/docker-compose.yml.template
@@ -7,7 +7,7 @@ networks:
 services:
     node-red:
         restart: always
-        image: nodered/node-red
+        image: nodered/node-red:2.2
         container_name: node-red
         volumes:
         - "{{ fs.app_data }}/data:/data"
