--- a/apps/audiobookshelf/docker-compose.yml.template
+++ b/apps/audiobookshelf/docker-compose.yml.template
@@ -7,7 +7,7 @@ networks:
 services:
     audiobookshelf:
         restart: always
-        image: ghcr.io/advplyr/audiobookshelf
+        image: ghcr.io/advplyr/audiobookshelf:2.2.23
         container_name: audiobookshelf
         volumes:
         - "{{ fs.app_data }}/audiobooks:/audiobooks"
