--- a/apps/element/docker-compose.yml.template
+++ b/apps/element/docker-compose.yml.template
@@ -7,7 +7,7 @@ networks:
 services:
     element:
         restart: always
-        image: vectorim/element-web
+        image: vectorim/element-web:v1.11.34
         container_name: element
         volumes:
         - "{{ fs.app_data }}/data:/data"
