--- a/apps/immich/app_meta.json
+++ b/apps/immich/app_meta.json
@@ -15,6 +15,7 @@
       "access": "public"
     }
   },
+  "minimum_portal_size": "m",
   "lifecycle": {
     "always_on": false,
     "idle_time_for_shutdown": 3600
