--- a/inactive_apps/template/docker-compose.yml.template
+++ b/inactive_apps/template/docker-compose.yml.template
@@ -11,5 +11,7 @@ services:
         container_name: <<name>>
         volumes:
         - "{{ fs.app_data }}/data:/data"
+        environment:
+        - BASE_URL=https://<<name>>.{{ portal.domain }}
         networks:
         - portal
