--- a/apps/immich/app_meta.json
+++ b/apps/immich/app_meta.json
@@ -1,6 +1,6 @@
 {
   "v": "1.0",
-  "app_version": "1.89.0",
+  "app_version": "v1.90.2",
   "name": "immich",
   "icon": "icon.png",
   "entrypoints": [
