update filebrowser to v2.26.0

--- a/apps/filebrowser/app_meta.json
+++ b/apps/filebrowser/app_meta.json
@@ -1,6 +1,6 @@
 {
   "v": "1.0",
-  "app_version": "0.1.0",
+  "app_version": "v2.26.0",
   "name": "filebrowser",
   "icon": "icon.svg",
   "entrypoints": [
