update convos to v8.05

--- a/apps/convos/app_meta.json
+++ b/apps/convos/app_meta.json
@@ -1,6 +1,6 @@
 {
   "v": "1.0",
-  "app_version": "0.1.0",
+  "app_version": "v8.05",
   "name": "convos",
   "icon": "icon.png",
   "entrypoints": [
