--- a/apps/docuseal/app_meta.json
+++ b/apps/docuseal/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "0.3.5",
   "name": "docuseal",
+  "pretty_name": "DocuSeal",
   "icon": "icon.svg",
   "entrypoints": [
     {
