--- a/apps/drawio/app_meta.json
+++ b/apps/drawio/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "0.1.0",
   "name": "drawio",
+  "pretty_name": "draw.io",
   "icon": "icon.png",
   "entrypoints": [
     {
