--- a/apps/ihatemoney/app_meta.json
+++ b/apps/ihatemoney/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "6.1.3",
   "name": "ihatemoney",
+  "pretty_name": "I Hate Money",
   "icon": "ihatemoney.png",
   "entrypoints": [
     {
