--- a/apps/mqttx/app_meta.json
+++ b/apps/mqttx/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "v1.9.7",
   "name": "mqttx",
+  "pretty_name": "MQTT X",
   "icon": "img.png",
   "entrypoints": [
     {
