--- a/apps/node-red/app_meta.json
+++ b/apps/node-red/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "0.1.0",
   "name": "node-red",
+  "pretty_name": "Node-RED",
   "icon": "icon.png",
   "entrypoints": [
     {
