--- a/apps/paperless-ngx/app_meta.json
+++ b/apps/paperless-ngx/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "2.2.1",
   "name": "paperless-ngx",
+  "pretty_name": "Paperless NGX",
   "icon": "icon.svg",
   "entrypoints": [
     {
