--- a/apps/stirling-pdf/app_meta.json
+++ b/apps/stirling-pdf/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "0.17.2",
   "name": "stirling-pdf",
+  "pretty_name": "Stirling PDF",
   "icon": "stirling.png",
   "entrypoints": [
     {
