--- a/apps/wbo/app_meta.json
+++ b/apps/wbo/app_meta.json
@@ -2,6 +2,7 @@
   "v": "1.0",
   "app_version": "0.1.0",
   "name": "wbo",
+  "pretty_name": "WBO",
   "icon": "icon.png",
   "entrypoints": [
     {
