--- a/apps/immich/.env
+++ b/apps/immich/.env
@@ -4,10 +4,10 @@
 UPLOAD_LOCATION=./library
 
 # The Immich version to use. You can pin this to a specific version like "v1.71.0"
-IMMICH_VERSION=v1.98.2
+IMMICH_VERSION=v1.101.0
 
 # Connection secrets for postgres and typesense. You should change these to random passwords
-TYPESENSE_API_KEY=some-random-text
+# TYPESENSE_API_KEY=some-random-text
 DB_PASSWORD=postgres
 
 # The values below this line do not need to be changed
