--- a/apps/paperless-ngx/app_meta.json
+++ b/apps/paperless-ngx/app_meta.json
@@ -1,6 +1,6 @@
 {
   "v": "1.0",
-  "app_version": "2.2.1",
+  "app_version": "2.7.2",
   "name": "paperless-ngx",
   "pretty_name": "Paperless NGX",
   "icon": "icon.svg",
@@ -14,6 +14,9 @@
   "paths": {
     "": {
       "access": "private"
+    },
+    "/share/": {
+      "access": "public"
     }
   },
   "minimum_portal_size": "s",
