--- a/apps/kavita/app_meta.json
+++ b/apps/kavita/app_meta.json
@@ -3,6 +3,7 @@
   "app_version": "0.7.10",
   "name": "kavita",
   "icon": "kavita-logo3.png",
+  "upstream_repo": "https://github.com/Kareadita/Kavita",
   "entrypoints": [
     {
       "container_name": "kavita",
