--- a/apps/titra/app_meta.json
+++ b/apps/titra/app_meta.json
@@ -3,6 +3,8 @@
   "app_version": "0.99.4",
   "name": "titra",
   "icon": "titra-logo-500.png",
+  "homepage": "https://titra.io/",
+  "upstream_repo": "https://github.com/kromitgmbh/titra",
   "entrypoints": [
     {
       "container_name": "titra",
