--- a/apps/wallabag/app_meta.json
+++ b/apps/wallabag/app_meta.json
@@ -3,6 +3,8 @@
   "app_version": "2.6.8",
   "name": "wallabag",
   "icon": "icon.svg",
+  "homepage": "https://wallabag.org/",
+  "upstream_repo": "https://github.com/wallabag/wallabag",
   "entrypoints": [
     {
       "container_name": "wallabag",
