--- a/apps/audiobookshelf/app_meta.json
+++ b/apps/audiobookshelf/app_meta.json
@@ -3,6 +3,7 @@
   "app_version": "2.12.3",
   "name": "audiobookshelf",
   "icon": "icon.svg",
+  "upstream_repo": "https://github.com/advplyr/audiobookshelf",
   "entrypoints": [
     {
       "container_name": "audiobookshelf",
