--- a/apps/dozzle/app_meta.json
+++ b/apps/dozzle/app_meta.json
@@ -4,6 +4,7 @@
   "name": "dozzle",
   "pretty_name": "Dozzle",
   "icon": "dozzle.png",
+  "upstream_repo": "https://github.com/amir20/dozzle",
   "entrypoints": [
     {
       "container_name": "dozzle",
