--- a/apps/immich/app_meta.json
+++ b/apps/immich/app_meta.json
@@ -3,6 +3,7 @@
   "app_version": "v1.117.0",
   "name": "immich",
   "icon": "immich-logo.svg",
+  "upstream_repo": "https://github.com/immich-app/immich",
   "entrypoints": [
     {
       "container_name": "immich_server",
