--- a/apps/navidrome/app_meta.json
+++ b/apps/navidrome/app_meta.json
@@ -1,6 +1,6 @@
 {
   "v": "1.0",
-  "app_version": "pr-2198",
+  "app_version": "0.53.3",
   "name": "navidrome",
   "icon": "icon.svg",
   "upstream_repo": "https://github.com/navidrome/navidrome",
