write files to master dir on blob store
Reason:
Earlier, the main branch was "master" and files were written to the branch name.
Now, the main branch is "main".
But the frontend expects the app store data under the "master" dir.
Instead of changing the frontend - which would be the correct way - I am writing to the "master" dir even though the branch is called "main".
Changing the frontend would be the correct move though.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           AZ_STORAGE_SAS_TOKEN: ${{ secrets.AZ_STORAGE_SAS_TOKEN }}
         run: |
           az storage blob upload-batch \
-            --destination "app-store/${{ github.ref_name }}/all_apps" \
+            --destination "app-store/master/all_apps" \
             --source apps \
             --sas-token $AZ_STORAGE_SAS_TOKEN \
             --account-name storageaccountportab0da \
