write files to both master and the branch name on blob store
Reason:
We want to change to using "main" as the main branch for good which includes changing the freeshard frontend to query the app store from the "main" directory. Currently, it queries from "master".
To make that transition easy, we keep both app stores current, so it does not matter when the change in the frontend will occur. The behaviour will be the same.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,3 +26,9 @@ jobs:
             --sas-token $AZ_STORAGE_SAS_TOKEN \
             --account-name storageaccountportab0da \
             --overwrite
+          az storage blob upload-batch \
+            --destination "app-store/${{ github.ref_name }}/all_apps" \
+            --source apps \
+            --sas-token $AZ_STORAGE_SAS_TOKEN \
+            --account-name storageaccountportab0da \
+            --overwrite
